Changelog
=========

1.3 (unreleased)
----------------

1.2 (2011-10-22)
----------------

* Plone 4.1 compability added.
  [timo]

1.1 (2011-04-18)
----------------

* Add z3c.autoinclude entry point.
  [davisagli]

1.0 (2010-03-02)
----------------

* Make sure the code is rendered even if there are no other active document
  actions.
  [davisagli]

* Make sure our browser layer takes precedence over Plone default in Plone 3.3
  [davisagli]

* Added checkbox to enable document action icons
  [Josh Boese]

* Initial implementation