@@ -24,6 +24,20 @@ class ISharerizerCode(Interface):
                        required=False,
                     )
                     
+    restrict = schema.Bool(
+        title=u"Restrict types",
+        description=u"Restrict the types for which the code is shown.",
+        required=False,
+        )
+
+    allowed_types = schema.List(
+        title=u"Allowed types",
+        description=(u"Select the types for which the code is shown, "
+                     u"if the restricted setting is used."),
+        required=False,
+        value_type=schema.Choice(source='plone.app.vocabularies.PortalTypes'),
+        )
+                    
                     
 class SharerizerCPAdapter(SchemaAdapterBase):
     adapts(IPloneSiteRoot)
@@ -52,7 +66,32 @@ class SharerizerCPAdapter(SchemaAdapterBase):
         return s_props.daicon
 
     daicon = property(getIcon, setIcon)
-    
+
+    def setRestrict(self, value):
+        portal_properties = getToolByName(self.context, 'portal_properties')
+        s_props = getattr(portal_properties, 'sharerizer')
+        s_props.manage_changeProperties(restrict=value)
+
+    def getRestrict(self):
+        portal_properties = getToolByName(self.context, 'portal_properties')
+        s_props = getattr(portal_properties, 'sharerizer')
+        return s_props.restrict
+
+    restrict = property(getRestrict, setRestrict)
+
+    def setAllowed_types(self, value):
+        portal_properties = getToolByName(self.context, 'portal_properties')
+        s_props = getattr(portal_properties, 'sharerizer')
+        s_props.manage_changeProperties(allowed_types=value)
+
+    def getAllowed_types(self):
+        portal_properties = getToolByName(self.context, 'portal_properties')
+        s_props = getattr(portal_properties, 'sharerizer')
+        return s_props.allowed_types
+
+    allowed_types = property(getAllowed_types, setAllowed_types)
+
+
 class SharerizerCP(ControlPanelForm):
 
     form_fields = FormFields(ISharerizerCode)
