@@ -3,6 +3,8 @@
  <object name="sharerizer" meta_type="collective.sharerizer property sheet">
   <property name="title" type="string" purge="False">collective.sharerizer settings</property>
   <property name="code" type="text" purge="False"></property>
-  <property name="daicon" type="boolean" purge="False"></property>
+  <property name="daicon" type="boolean"></property>
+  <property name="restrict" type="boolean"></property>
+  <property name="allowed_types" type="lines" purge="False"></property>
  </object>
 </object>
