@@ -4,6 +4,10 @@ Changelog
 1.3 (unreleased)
 ----------------
 
+* Added option in configlet to restrict the portal types where the
+  code is shown.
+  [maurits]
+
 1.2 (2011-10-22)
 ----------------
 
